<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context="com.griffith.assignment3.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_distance_txt"
        android:textAllCaps="true"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/total_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0.00"
        android:textAlignment="textEnd"
        android:layout_gravity="end"
        android:gravity="end"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_speed_txt"
        android:textAllCaps="true"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/current_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0.00"
        android:textAlignment="textEnd"
        android:layout_gravity="end"
        android:gravity="end"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/average_speed_txt"
        android:textAllCaps="true"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/average_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0.00"
        android:textAlignment="textEnd"
        android:layout_gravity="end"
        android:gravity="end"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_time_txt"
        android:textAllCaps="true"
        android:textStyle="italic" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/button_stop_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/button_start_txt"
        android:textColor="@color/colorSecondaryLight" />

    <!--<Button-->
        <!--android:id="@+id/button_summary_activity"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="bottom"-->
        <!--android:background="@color/colorPrimaryDark"-->
        <!--android:text="@string/summary_activity"-->
        <!--android:textColor="@color/colorSecondaryLight" />-->
</LinearLayout>
